@@ -1373,6 +1373,30 @@
     </plugins>
   </build>
   <profiles>
+      <profile>
+      <id>java12</id>
+      <activation>
+        <jdk>12</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>--add-exports
+					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
+					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
+					java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED
+					--add-exports
+					java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
+					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
+					java.base/java.lang=ALL-UNNAMED --add-opens
+					java.base/java.lang.reflect=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/jdk-12/bin/java</test.jvm.path>
+        <jdk.src.version>1.8</jdk.src.version>
+        <jdk.target.version>1.8</jdk.target.version>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.8.1</jacoco.version>
+        <compiler.plugin.version>3.7.0-jboss-1</compiler.plugin.version>
+        <surefire.version>2.22.0</surefire.version>
+      </properties>
+    </profile>
     <profile>
       <id>java11</id>
       <activation>
